-Removed pipe code from test -Updated to 1.18.2 -Refactored the API -Updated to Loom 0.12 (WIP) -Greatly modified the loader API -Migrated drawing the config API to a forge event